Fix stretching of adaptive widgets in a mobile view

--- a/styles/mobile/common/base.less
+++ b/styles/mobile/common/base.less
@@ -423,6 +423,14 @@
     width: 100%;
 }
 
+.km-stretched-view > .km-pane-wrapper {
+    position: static;
+}
+
+.km-stretched-view > .km-pane-wrapper > .km-pane {
+    position: static;
+}
+
 .km-overlay
 {
     position: absolute;
